Add PWA, fix instructions

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>UniSched для ЛНУ імені Івана Франка</title>
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#141B4D" />
     <link rel="icon" href="/img/favicon.ico" sizes="any">
     <link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
     <!--suppress HtmlUnknownTarget -->
