Add analytics, fix NullReferenceException in settings

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
@@ -16,7 +15,6 @@
     <!--suppress HtmlUnknownTarget -->
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
-
 <body>
     <div id="app">
         <div class="loading-panel">
@@ -34,6 +32,7 @@
     <script src="_content/MudBlazor/MudBlazor.min.js"></script>
     <!--suppress HtmlUnknownTarget -->
     <script src="_framework/blazor.webassembly.js"></script>
+    <!--suppress HtmlUnknownTarget -->
+    <script src="_content/Blazor-Analytics/blazor-analytics.js"></script>
 </body>
-
 </html>
