--- a/404.html
+++ b/404.html
@@ -11,8 +11,6 @@
     <link rel="icon" href="/img/favicon.ico" sizes="any">
     <link rel="apple-touch-icon" href="/img/apple-touch-icon.png">
     <!--suppress HtmlUnknownTarget -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <!--suppress HtmlUnknownTarget -->
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 </head>
 <body>
@@ -34,5 +32,6 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <!--suppress HtmlUnknownTarget -->
     <script src="_content/Blazor-Analytics/blazor-analytics.js"></script>
+    <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
 </html>
