--- a/404.html
+++ b/404.html
@@ -14,6 +14,15 @@
     <link rel="stylesheet" href="https://unpkg.com/98.css">
 
     <style>
+        * {
+            user-select: none;
+            -moz-user-select: none;
+            -webkit-user-select: none;
+            -ms-user-select: none;
+
+            user-drag: none;
+            -webkit-user-drag: none;
+        }
         html, body {
             height: 100%;
             margin: 0;
@@ -31,6 +40,7 @@
         button {
             font-size: 1.2rem;
             padding: 10px;
+            cursor: pointer;
         }
 
         div.window {
